--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>MedLearn | Home</title>
+  <title>Rate pas tes partiels | Home</title>
   <style>
     * {
       box-sizing: border-box;
@@ -113,7 +113,7 @@
 <body>
 
   <nav>
-    <div class="logo">MedLearn</div>
+    <div class="logo">Rate pas les partiels</div>
     <div class="nav-links">
       <a href="#">Home</a>
       <a href="#">Courses</a>
@@ -122,8 +122,8 @@
   </nav>
 
   <div class="hero">
-    <h1>Welcome to MedLearn</h1>
-    <p>Your one-stop platform for mastering medicine. Access interactive courses, practice questions, and stay on top of your med school journey.</p>
+    <h1>RATE PAS LES PARTIELS</h1>
+    <p>QCMs de qualite pour ne pas rater les partiels</p>
     <div class="buttons">
       <a href="#" class="btn-primary">Enter Dashboard</a>
       <a href="#" class="btn-secondary">Browse Courses</a>
@@ -131,7 +131,7 @@
   </div>
 
   <footer>
-    © 2025 MedLearn. All rights reserved.
+    © 2025 RatePasLesPartiels. All rights reserved.
   </footer>
 
 </body>
