--- a/index.html
+++ b/index.html
@@ -3,9 +3,68 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Alexia's Art</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Alexia's World</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Raleway&display=swap" rel="stylesheet">
+
+  <style>
+    body {
+      margin: 0;
+      background: #fdf6f0;
+      color: #2c2c2c;
+      font-family: 'Raleway', sans-serif;
+    }
+
+    .hero {
+      background: linear-gradient(to bottom right, #ffe4e1, #fceabb);
+      text-align: center;
+      padding: 80px 20px;
+      font-family: 'Playfair Display', serif;
+      animation: fadeIn 2s ease;
+    }
+
+    .hero h1 {
+      font-size: 3rem;
+      margin-bottom: 10px;
+      color: #4b2e2e;
+    }
+
+    .hero p {
+      font-size: 1.2rem;
+      color: #5a5a5a;
+    }
+
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 15px;
+      padding: 40px;
+      animation: fadeIn 1.5s ease;
+    }
+
+    .gallery img {
+      width: 100%;
+      border-radius: 20px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .gallery img:hover {
+      transform: scale(1.03);
+      box-shadow: 0 12px 25px rgba(0, 0, 0, 0.15);
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9rem;
+      color: #888;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to   { opacity: 1; transform: translateY(0); }
+    }
+  </style>
 </head>
 <body>
   <header class="hero">
@@ -19,7 +78,7 @@
     <img src="images/photo3.jpg" alt="Art 3" />
     <img src="images/photo4.jpg" alt="Art 4" />
     <img src="images/photo5.jpg" alt="Art 5" />
-    <!-- Add more as needed -->
+    <!-- Add more <img> tags as needed -->
   </main>
 
   <footer>
