--- a/index.html
+++ b/index.html
@@ -164,30 +164,30 @@
 <body>
 
   <header>
-    <h1>QuizNest</h1>
-    <p>Sharpen your mind. One quiz at a time. 🧠</p>
+    <h1>QCMs + Annales</h1>
+    <p>A l'aise pour les partiels.</p>
   </header>
 
   <main>
     <div class="section-title">
-      <h2>Choose a Quiz Category</h2>
+      <h2>Choisis le cours</h2>
     </div>
 
     <div class="card-grid">
       <div class="card">
         <img src="https://img.icons8.com/ios-filled/50/4caf50/brain.png" alt="Neuro">
-        <h3>Neurology</h3>
-        <p>Challenge your brain with neuro quizzes.</p>
+        <h3>NeuroPsy</h3>
+        <p> ... </p>
       </div>
       <div class="card">
         <img src="https://img.icons8.com/ios-filled/50/4caf50/stethoscope.png" alt="General Med">
-        <h3>General Medicine</h3>
-        <p>Test your clinical reasoning across fields.</p>
+        <h3>Urologie</h3>
+        <p> ... </p>
       </div>
       <div class="card">
         <img src="https://img.icons8.com/ios-filled/50/4caf50/baby.png" alt="Gyneco">
-        <h3>Gynecology</h3>
-        <p>Revisit women's health topics effectively.</p>
+        <h3> Cancérologie </h3>
+        <p> ... </p>
       </div>
     </div>
   </main>
@@ -196,7 +196,7 @@
     <div class="footer-grid">
       <div>
         <h4>About</h4>
-        <p>QuizNest helps med students learn faster through custom quizzes and interactive learning tools.</p>
+        <p>Plateforme qui réunit les annales et QCMs disponibles pour la réussite en D1.</p>
       </div>
       <div>
         <h4>Links</h4>
