--- a/index.html
+++ b/index.html
@@ -173,23 +173,25 @@
       <h2>Choisis le cours</h2>
     </div>
 
-    <a href="neuropsy.html" class="card">
-  <img src="https://img.icons8.com/ios-filled/50/4caf50/brain.png" alt="Neuro">
-  <h3>NeuroPsy</h3>
-  <p> ... </p>
-</a>
-      </div>
-      <a href="urologie.html" class="card">
-  <img src="https://img.icons8.com/ios-filled/50/4caf50/brain.png" alt="Neuro">
-  <h3>Urologie</h3>
-  <p> ... </p>
-</a>
-      <a href="cancerologie.html" class="card">
-  <img src="https://img.icons8.com/ios-filled/50/4caf50/brain.png" alt="Neuro">
-  <h3>cancérologie</h3>
-  <p> ... </p>
-</a>
-    </div>
+    <div class="card-grid">
+  <a href="neuropsy.html" class="card">
+    <img src="https://img.icons8.com/ios-filled/50/4caf50/brain.png" alt="Neuro">
+    <h3>NeuroPsy</h3>
+    <p> ... </p>
+  </a>
+
+  <a href="urologie.html" class="card">
+    <img src="https://img.icons8.com/ios-filled/50/4caf50/stethoscope.png" alt="Urologie">
+    <h3>Urologie</h3>
+    <p> ... </p>
+  </a>
+
+  <a href="cancerologie.html" class="card">
+    <img src="https://img.icons8.com/ios-filled/50/4caf50/baby.png" alt="Cancérologie">
+    <h3>Cancérologie</h3>
+    <p> ... </p>
+  </a>
+</div>
   </main>
 
   <footer>
