--- a/neuropsy.html
+++ b/neuropsy.html
@@ -1,14 +1,51 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>NeuroPsy - QuizNest</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>NeuroPsy | QuizNest</title>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    /* Paste the same CSS from your home page here */
+    /* ... (use same <style> section as in index.html) ... */
+  </style>
 </head>
 <body>
-  <h1>NeuroPsy</h1>
-  <p>Bienvenue sur le cours de NeuroPsy. Voici un quiz pour t’entraîner :</p>
 
-  <a href="quiz-neuro.html">Commencer le quiz</a>
+  <header>
+    <h1>NeuroPsy</h1>
+    <p>Annales, QCMs et révisions ciblées.</p>
+  </header>
+
+  <main>
+    <div class="section-title">
+      <h2>Choisis un type d’exercice</h2>
+    </div>
+
+    <div class="card-grid">
+      <a href="neuro_qcm.html" class="card">
+        <img src="https://img.icons8.com/ios-filled/50/4caf50/question-mark.png" alt="QCM">
+        <h3>QCM</h3>
+        <p>Questions à choix multiples pour tester tes connaissances en NeuroPsy.</p>
+      </a>
+
+      <a href="neuro_annales.html" class="card">
+        <img src="https://img.icons8.com/ios-filled/50/4caf50/document.png" alt="Annales">
+        <h3>Annales</h3>
+        <p>Retrouve les sujets des années précédentes pour t'entraîner.</p>
+      </a>
+
+      <a href="neuro_flashcards.html" class="card">
+        <img src="https://img.icons8.com/ios-filled/50/4caf50/cards.png" alt="Flashcards">
+        <h3>Flashcards</h3>
+        <p>Révise rapidement avec des cartes de rappel.</p>
+      </a>
+    </div>
+  </main>
+
+  <footer>
+    <!-- Paste the same footer as in home page -->
+  </footer>
+
 </body>
 </html>
