--- a/neuropsy.html
+++ b/neuropsy.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>NeuroPsy | QuizNest</title>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
-  <style>
-    /* Paste the same CSS from your home page here */
-    /* ... (use same <style> section as in index.html) ... */
-  </style>
+
+<link rel="stylesheet" href="style.css" />
+
+  
 </head>
 <body>
 
