--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
   
 </head>
 <body>
+  
+<nav class="navbar">
+  <div class="container">
+    <a href="index.html" class="logo">QuizNest</a>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="neuropsy.html">NeuroPsy</a></li>
+      <li><a href="urologie.html">Urologie</a></li>
+      <li><a href="cancerologie.html">Cancérologie</a></li>
+    </ul>
+  </div>
+</nav>
 
   <header>
     <h1>QCMs + Annales</h1>
