add navbar neuropsy.html

--- a/neuropsy.html
+++ b/neuropsy.html
@@ -12,6 +12,19 @@
 </head>
 <body>
 
+<nav class="navbar">
+  <div class="container">
+    <a href="index.html" class="logo">QuizNest</a>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="neuropsy.html">NeuroPsy</a></li>
+      <li><a href="urologie.html">Urologie</a></li>
+      <li><a href="cancerologie.html">Cancérologie</a></li>
+    </ul>
+  </div>
+</nav>
+
+  
   <header>
     <h1>NeuroPsy</h1>
     <p>Annales, QCMs et révisions ciblées.</p>
