--- a/index.html
+++ b/index.html
@@ -35,23 +35,27 @@
     </div>
 
     <div class="card-grid">
-  <a href="neuropsy.html" class="card">
-    <img src="https://img.icons8.com/ios-filled/50/4caf50/brain.png" alt="Neuro">
-    <h3>NeuroPsy</h3>
-    <p> ... </p>
+  <a href="neurosensoriel.html" class="card">
+    <img src="https://img.icons8.com/?size=100&id=I9UE1GaYhxtO&format=png&color=000000" alt="Sensoriel">
+    <h3>UE1 <br> Neuro Sensoriel</h3>
   </a>
 
-  <a href="urologie.html" class="card">
-    <img src="https://img.icons8.com/ios-filled/50/4caf50/stethoscope.png" alt="Urologie">
-    <h3>Urologie</h3>
-    <p> ... </p>
+  <a href="revetcut.html" class="card">
+    <img src="https://img.icons8.com/?size=100&id=9556&format=png&color=000000" alt="Revet Cut">
+    <h3>UE2 <br> Revêtement cutané</h3>
   </a>
 
   <a href="cancerologie.html" class="card">
-    <img src="https://img.icons8.com/ios-filled/50/4caf50/baby.png" alt="Cancérologie">
+    <img src="https://img.icons8.com/?size=100&id=BtDWA1HxoySc&format=png&color=000000" alt="Cancérologie">
+    <h3>UE3 <br> Cancérologie</h3>
+  </a>
+
+  <a href="cancerologie.html" class="card">
+    <img src="https://img.icons8.com/?size=100&id=BtDWA1HxoySc&format=png&color=000000" alt="Cancérologie">
     <h3>Cancérologie</h3>
     <p> ... </p>
   </a>
+      
 </div>
   </main>
 
