add courses index.html

--- a/index.html
+++ b/index.html
@@ -50,10 +50,29 @@
     <h3>UE3 <br> Cancérologie</h3>
   </a>
 
-  <a href="cancerologie.html" class="card">
-    <img src="https://img.icons8.com/?size=100&id=BtDWA1HxoySc&format=png&color=000000" alt="Cancérologie">
-    <h3>Cancérologie</h3>
-    <p> ... </p>
+  <a href="epidemio.html" class="card">
+    <img src="https://img.icons8.com/?size=100&id=ID2TfGQAL6F6&format=png&color=000000" alt="Cancérologie">
+    <h3>UE4 <br> Epidémiologie et biomédecine quantitative</h3>
+  </a>
+
+ <a href="anglais.html" class="card">
+    <img src="https://img.icons8.com/?size=100&id=8214&format=png&color=000000" alt="Anglais">
+    <h3>UE5 <br> Anglais</h3>
+  </a>      
+
+<a href="genetique.html" class="card">
+    <img src="https://img.icons8.com/?size=100&id=9493&format=png&color=000000" alt="Genetique">
+    <h3>UE6 <br> Génétique</h3>
+  </a>
+
+<a href="uronephro.html" class="card">
+    <img src="https://img.icons8.com/?size=100&id=9493&format=png&color=000000" alt="UroNephrologie">
+    <h3>UE7 <br> Uro-Néphrologie</h3>
+  </a>
+
+<a href="neuropsy.html" class="card">
+    <img src="https://img.icons8.com/?size=100&id=z3YMXqHDYl9X&format=png&color=000000" alt="NeuroPsy">
+    <h3>UE8 <br> NeuroPsy</h3>
   </a>
       
 </div>
