--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <div class="card-grid">
   <a href="neurosensoriel.html" class="card">
-    <img src="https://img.icons8.com/?size=100&id=I9UE1GaYhxtO&format=png&color=000000" alt="Sensoriel">
+    <img src="https://img.icons8.com/nolan/64/neuropathy.png" alt="neuropathy"/>
     <h3>UE1 <br> Neuro Sensoriel</h3>
   </a>
 
