--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </a>
 
   <a href="revetcut.html" class="card">
-    <img src="https://img.icons8.com/?size=100&id=9556&format=png&color=000000" alt="Revet Cut">
+    <img color="black" src="https://img.icons8.com/?size=100&id=9556&format=png&color=000000" alt="Revet Cut">
     <h3>UE2 <br> Revêtement cutané</h3>
   </a>
 
