quiz index.html

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <h4>Links</h4>
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">Start Quiz</a></li>
+          <li><a href="quiz.html">Start Quiz</a></li>
           <li><a href="#">Topics</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
