voir erreurs quiz.html

--- a/quiz.html
+++ b/quiz.html
@@ -17,8 +17,10 @@
   </header>
 
   <main>
-    <div id="quiz-container"></div>
-  </main>
+  <div id="quiz-container"></div>
+  <div id="result-container"></div> <!-- For score and button -->
+</main>
+
 
   <script src="quiz.js"></script>
 
