--- a/quiz.html
+++ b/quiz.html
@@ -11,9 +11,9 @@
 
   <header>
     <h1>NeuroPsy Quiz</h1>
-    <nav>
-      <a href="index.html" class="nav-link">Home</a>
-    </nav>
+    
+      <a href="index.html">Home</a>
+    
   </header>
 
   <main>
