--- a/quiz.html
+++ b/quiz.html
@@ -12,7 +12,9 @@
   <header>
     <h1>NeuroPsy Quiz</h1>
     
-      <a href="index.html">Home</a>
+      <nav>
+          <a href="index.html" class="nav-link">Home</a>
+      </nav>
     
   </header>
 
@@ -21,7 +23,7 @@
   <div id="result-container"></div> <!-- For score and button -->
 </main>
 
-
+<script src="quiz.js"></script>
   
 
 </body>
