--- a/quiz.html
+++ b/quiz.html
@@ -31,6 +31,7 @@
   <div id="result-container"></div> <!-- For score and button -->
 </main>
 
+<script src="questions.js"></script>
 <script src="quiz.js"></script>
   
 
